20040110:
---------
	* Version 0.2.0
	* Added support for user defined poweroff/halt/reboot commands,
	  and some cleanups, thanks to Brian Tarricone.
	* Various fixes in the meantime, too bad I have no spare time for
	  xfce :-(

20030721:
---------
	* Fix problem with Xrandr MCS plugin and splash screen not using
	  the new screen height/width.

20030716:
---------
	* XfceTrayIcon now both provides "clicked" (a single left button
	  click) and "double_clicked" (double left button click) signals
	* XfceTrayIcon no longer autoconnects, you'll need to call
	  xfce_tray_icon_connect() explicitly

20030715:
---------
	* Version 0.1.1
	* Make "session control" sticky again, since the xfwm4 problem with
	  sticky windows seems to be fixed
	* Many improvements on the XfceTrayIcon class (will be moved to
	  libxfcegui4 soon)
	* Session managers tray icon can now be enabled/disabled from
	  the settings dialog
	* Added more helpful tooltips to the settings dialog (translations
	  needs to be updated)

20030713:
---------
	* Version 0.1.0
	* Fixed problem with SaveYourself Phase2 being aborted (that
	  should also correct the xfwm4 save problem).
	* Fixed problem with "session control" window beeing undecorated
	* Fix problem with users splash themes directory not being created
	  when installing new themes
	* Skip the splash screen window in tasklists and pagers (Gdk >= 2.2
	  only for now, a netk version is on the way, see util.c)

20030712:
---------
	* Fixed tray icon problem
	* New tray icon wrapper XfceTrayIcon, will be moved to libxfcegui4
	  later

20030710:
---------
	* Added spec file
	* Two Solaris fixes
	* State is now displayed in "session control"
	* added "Quit session" and "Save session" to the tray menu
	  (GtkImageMenuItem's now working btw.)
	* Fixed bug in SaveYourselfDone code (manager does not entered
	  IDLE state after a succesfull checkpoint)
	* Added UNIX signals support: SIGUSR1 saves current session, SIGINT
	  quits current session