@@ -8,7 +8,7 @@
  * Add APM support (separate SM client)
  * Use GScanner to parse splash.theme files?!
  * Add an option to disable Autostart by xfce4-session
- * Fix "Autostart" with default.session
+ * Fix "Autostart" with default.session [no problem]
  * Add configure options to make packagers life easier regarding the
    "shutdown/reboot" thing (see the Mail from Marcel Pol on 20031120)
    [partly done]
