@@ -1,4 +1,6 @@
-/*
+/* $Id$ */
+
+/*-
  * Copyright (c) 2003 Benedikt Meurer <benedikt.meurer@unix-ag.uni-siegen.de>
  * All rights reserved.
  *
