@@ -1,3 +1,7 @@
+20040113:
+---------
+	* Added --disable-tcp option to disable binding to TCP ports.
+
 20040110:
 ---------
 	* Version 0.2.0
